--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	  <div class="panel-heading">New Package</div>
 	  <div class="panel-body">
 		This is a sample package with lots of information.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/com.pwn20wnd.eraser/">More info</a>
 	  </div>
 	</div>
 </div>
